fix scrollbar causing contents to move

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,3 +1,10 @@
+/* prevents scrollbar from moving site content
+https://stackoverflow.com/a/39289453 */
+html {
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
